--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,8 +12,10 @@
     "body-parser": "^1.18.3",
     "dotenv": "^9.0.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7",
     "pg": "^8.6.0",
     "pg-native": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
