--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.1",
+    "cookie-session": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-player": "^2.9.0",
