--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "*",
     "axios": "^0.18.1",
     "classnames": "^2.3.1",
     "cookie-session": "^1.4.0",
