--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.1",
     "cookie-session": "^1.4.0",
     "react": "^16.8.6",
+    "react-alert": "^7.0.3",
     "react-dom": "^16.8.6",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
